# eeg_schaltplaene

./: .gitignore  KOMPONENTEN.md  LICENSE  README.md  README_STREAMLIT.md  app.py  pyproject.toml  renovate.json
.github/: FUNDING.yml  copilot-instructions.md
.streamlit/: config.toml  pages.toml
pages/: 1_PV_mit_Speicher.py  2_PV_ohne_Speicher.py  start.py
src/schaltplaene/: __init__.py
src/schaltplaene/beispiele/: __init__.py  pv_komplett.py  pv_mit_speicher.py
src/schaltplaene/komponenten/: __init__.py  batterie.py  enums.py  erdung.py  fehlerstromschutzschalter.py  inverter.py  leitungsschutzschalter.py  netz.py  pe_line.py  pv_module.py  schalter.py  schmelzsicherung.py  ueberspannungsschutz.py  verbrauch.py  wechselrichter.py  zaehler.py
src/schaltplaene/templates/: __init__.py  pv_speicher_system_ueberschuss.py  pv_system_ueberschuss.py
src/schaltplaene/utils/: generiere_komponenten_bilder.py
